[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduled-pipelines"
authors = [{ name = "luca-serra", email = "luca.serra@artefact.com" }]
description = "Test repo to test the best solution to schedule Vertex AI pipelines"
version = "0.0.1"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/artefactory-fr/scheduled-pipelines"
"Documentation" = "https://artefactory-fr.github.io/scheduled-pipelines"

[tool.setuptools]
packages = ["config", "app"]

[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "ANN",
  "Q",
  "RET",
  "ARG",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = ["D203", "D213", "ANN101", "ANN102"]
line-length = 100
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
